--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: ThePMJournal
+description: Issues in Project Management Amid the Pandemic
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
